fix: 퀴즈 응답 dto로 파싱 안되는 거 수정